--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "scipy>=1.10.1,<=1.15.2",
     "cirq-core>=1.4.0,<1.5.0",
     "tabulate",
+    "matplotlib>=3.8",
 ]
 
 [project.optional-dependencies]
@@ -75,7 +76,6 @@ docs = [
     "jupytext==1.16.1",
     "sphinx-gallery==0.15.0",
     "nbsphinx==0.9.3",
-    "matplotlib==3.8.1",
     "pandas==2.1.3",
     "pyscf==2.9.0; sys_platform != 'win32'",
     "openfermion==1.7.0; sys_platform != 'win32'",
